# sp1-project-template

lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/data/: attestation_data_without_aes.json  config_without_aes.json
